force-app/main/default/objects/SAPPlant__c/SAPPlant__c.object-meta.xml
<CustomObject>
    <label>SAP Plant</label>
    <nameField>
        <label>Plant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SAP Plants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>