force-app/main/default/objects/SAPPlant__c/fields/Plant__c.field-meta.xml
<CustomField>
    <fullName>Plant__c</fullName>
    <externalId>true</externalId>
    <label>Plant</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>