force-app/main/default/objects/SAPPlant__c/fields/Postcode__c.field-meta.xml
<CustomField>
    <fullName>Postcode__c</fullName>
    <label>Postcode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>