force-app/main/default/objects/SAPPlant__c/fields/Province__c.field-meta.xml
<CustomField>
    <fullName>Province__c</fullName>
    <description>Province or state</description>
    <label>Province</label>
    <length>3</length>
    <type>Text</type>
</CustomField>