force-app/main/default/objects/SAPPlant__c/fields/PurchaseOrg__c.field-meta.xml
<CustomField>
    <fullName>PurchaseOrg__c</fullName>
    <label>PurchaseOrg</label>
    <length>4</length>
    <type>Text</type>
</CustomField>