force-app/main/default/objects/SAPPlant__c/fields/SalesOrg__c.field-meta.xml
<CustomField>
    <fullName>SalesOrg__c</fullName>
    <label>SalesOrg</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sales_orgs</valueSetName>
    </valueSet>
</CustomField>